apps/homarr/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homarr
  namespace: homarr
  labels:
    app: homarr
    app.kubernetes.io/instance: homarr-prd
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: homarr
    app.kubernetes.io/part-of: homarr
    homelab.local/OwnedBy: ElPoshoX
spec:
  selector:
    app: homarr
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: homarr
    homelab.local/OwnedBy: ElPoshoX
  ports:
  - name: homarr
    protocol: TCP
    port: 3001
    targetPort: 3000
  type: LoadBalancer
  internalTrafficPolicy: Cluster
  externalTrafficPolicy: Cluster
