apps/homarr/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homarr
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`homarr.elposhox.dev`)
    services:
    - kind: Service
      name: homarr
      port: 80
